# Libtacom

./: CMakeLists.txt  config.cfg  demo.out  kalia.wav.csv  sample.au  start.sh  startTest.sh  test.wav.csv
0_executables/: CMakeLists.txt  Makefile
0_executables/demo_standard/: demo.cpp
0_executables/tests/config4cpp/demos/simple-encapsulation/: demo
0_executables/tests/test_config4cpp/: CMakeLists.txt
1_include/: device.h
2_src/: HaptiCommConfiguration.cpp  alphabet.cpp
4_configuration/: Movement.aup  Tap.aup  TapHold.aup  config.cfg  configBraille.cfg  configBraille_rev.cfg  configDebug.cfg  configFreq.cfg  configSven.cfg  config_backup20180417.cfg  configtest2.cfg  fbraille.cfg
4_configuration/Movement_data/e08/d08/: e0808051.au  e080807d.au  e080807e.au  e0808105.au  e0808327.au  e08083c9.au  e08083ef.au  e0808432.au  e080851f.au  e0808529.au  e0808592.au  e0808611.au  e080869e.au  e080881f.au  e0808a70.au  e0808abd.au  e0808bf5.au  e0808c0f.au  e0808c23.au  e0808c45.au  e0808c6b.au  e0808cb8.au  e0808d38.au  e0808d42.au  e0808d83.au  e0808f40.au  e0808f81.au  e0808fd6.au
4_configuration/TapHold_data/e08/d08/: e0808215.au  e08088a4.au
4_configuration/Tap_data/e08/d08/: e0808368.au  e0808745.au
4_configuration/cfg/: configYellowAuslan.cfg
4_configuration/cfg/wav/: configWAVFullAndFreq.cfg
apparent_motion_experiment/: appmotion_experiment.cpp
apparent_motion_experiment/src/: tools.cpp
caracterise2018/: CMakeLists.txt  caracterise2018.cpp
caracterise2018/results/1-500Hz/results/: n1_up300f10amp1000_theoric.csv  n2_up500f300amp1000_theoric.csv
cfg/: configBlueAuslan.cfg
demo_standard/: CMakeLists.txt  demo.cpp
determine-up/: determine-up.cpp
executables/: CMakeLists.txt  cmake_install.cmake
executables/alphabetExperiment/: CMakeLists.txt  alphabetExpe.cpp
executables/alphabetExperiment/src/: toolsAlphaExpe.cpp
executables/apparent_motion_experiment/: CMakeLists.txt  appmotion_experiment.cpp
executables/apparent_motion_experiment/include/: tools.h
executables/demo_standard/: demo.cpp
executables/maximum_tap_motion_experiment/: maximum_tapmotion_experiment.cpp
executables/sinefunction_generator/: sinefunction_generator.cpp
executables/tap_motion_experiment/: tapmotion_experiment.cpp
executables/taphold_motion_experiment/: tapholdmotion_experiment.cpp
executables/tests/config4cpp/demos/encapsulate-lookup-api/: demo
executables/tests/config4cpp/demos/extended-schema-validator/: demo
executables/tests/config4cpp/demos/log-level/: demo
executables/tests/config4cpp/demos/recipes/: demo
executables/tests/config4cpp/demos/simple-encapsulation/: demo
executables/tests/config4cpp/src/: config2cpp  config2cpp-nocheck  config4cpp
executables/tests/config4cpp/tests/schema-types/: test-schema-types
executables/tests/prototype/: demo.cpp
include/: HaptiCommConfiguration.h  ad5383.h  alphabet.h  device.h  device_defines.h  waveform.h  waveform_defines.h  waveform_obj.h
neutral/: neutral.cpp
readMp3/: readMP3.cpp
sinefunction_generator/: CMakeLists.txt  sinefunction_generator.cpp
src/: GPIOClass.cpp  HaptiCommConfiguration.cpp  ad5383.cpp  alphabet.cpp  device.cpp  waveform.cpp  waveform_obj.cpp
tests/config4cpp/demos/encapsulate-lookup-api/: demo
tests/config4cpp/demos/extended-schema-validator/: demo
tests/config4cpp/demos/log-level/: demo
tests/config4cpp/demos/recipes/: demo
tests/config4cpp/demos/simple-encapsulation/: demo
tests/config4cpp/src/: config2cpp-nocheck  config4cpp
tests/config4cpp/tests/schema-types/: test-schema-types
tests/read_values/: CMakeLists.txt  read_values.cpp
tests/test_readkey/: CMakeLists.txt
tests/test_vectors/: CMakeLists.txt
